bunch of tweaks with a few bugs fixed; all found by FindBugs
[git-p4: depot-paths = "//depot/code/antlr/main/": change = 3235]